# atoml

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  setup.py
.github/: FUNDING.yml  ci.yml  release.yml
.github/workflows/: ci.yml
atoml/: __init__.py  _compat.py  _utils.py  api.py  compat.py  container.py  containers.py  decoder.py  encoder.py  errors.py  exceptions.py  items.py  parser.py  source.py  toml.lark  toml_char.py  toml_file.py  transformer.py  tz.py
tests/: check_single.py  test_api.py  test_build.py  test_decode.py  test_decode.sh  test_encode.sh  test_items.py  test_normal.toml  test_parser.py  test_special.py  test_toml_document.py  test_toml_file.py  test_toml_spec_tests.py  test_toml_tests.py  test_utils.py  test_value.toml  test_write.py
toml/: __init__.py  compat.py  decoder.py  encoder.py  tz.py
tomlkit/: __init__.py  container.py  parser.py
