[tool.pdm]
version = {use_scm = true}

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pyyaml~=5.4",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "atoml"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
    {name = "Sébastien Eustace", email = "sebastien@eustace.io"},
]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = []
description = "Yet another style preserving TOML library"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/frostming/atoml.git"
Repository = "https://github.com/frostming/atoml.git"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | tests/toml-test
)/
'''

[tool.isort]
profile = "black"
atomic = true
lines_after_imports = 2
lines_between_types = 1

known_first_party = ["atoml"]
known_third_party = ["pytest"]
